fixes to About/Skills spacing on xl screen sizes, update staticDarkModeBg height to include 5 sections and prevent glitches when activating the DropdownMenu on the last section

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,7 +31,7 @@ html::-webkit-scrollbar {
 }
 
 .aboutText {
-	@apply max-w-[80%] text-xs opacity-60 sm:max-w-full lg:text-sm;
+	@apply max-w-[80%] text-xs opacity-60 sm:max-w-full tall:text-sm;
 }
 
 .projectGridMember {
